Refactored findAllResources
Signed-off-by: antublue <antublue@antublue.org>